Remove doc processor service

--- a/docker-compose-hetz.yaml
+++ b/docker-compose-hetz.yaml
@@ -58,22 +58,22 @@ services:
     networks:
       - default
 
-  agents-doc-processor:
-    build:
-      context: ./doc-processor
-      dockerfile: Dockerfile
-    container_name: agents-doc-processor
-    env_file:
-      - .env
-    volumes:
-      - ./docs/uploads:/app/uploads
-      - ./docs/processed:/app/processed
-    depends_on:
-      - agents-qdrant
-      - agents-redis
-    restart: unless-stopped
-    networks:
-      - default
+#  agents-doc-processor:
+#    build:
+#      context: ./doc-processor
+#      dockerfile: Dockerfile
+#    container_name: agents-doc-processor
+#    env_file:
+#      - .env
+#    volumes:
+#      - ./docs/uploads:/app/uploads
+#      - ./docs/processed:/app/processed
+#    depends_on:
+#      - agents-qdrant
+#      - agents-redis
+#    restart: unless-stopped
+#    networks:
+#      - default
 
 volumes:
   agents_n8n_data:
